# RAH-Employee-Management-System

./: .gitignore
backend/: pyproject.toml
backend/app/: main.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @babel+runtime@7.27.4.js  @emotion+cache@11.14.0.js  @emotion+hash@0.9.2.js  @emotion+is-prop-valid@1.3.1.js  @emotion+memoize@0.9.0.js  @emotion+react@11.14.0_@types+react@19.1.6_react@19.1.0.js  @emotion+serialize@1.3.3.js  @emotion+sheet@1.4.0.js  @emotion+styled@11.14.0_@emotion+react@11.14.0_@types+react@19.1.6_react@19.1.0__@types+react@19.1.6_react@19.1.0.js  @emotion+unitless@0.10.0.js  @emotion+use-insertion-effect-with-fallbacks@1.2.0_react@19.1.0.js  @emotion+utils@1.4.2.js  @emotion+weak-memoize@0.4.0.js  @mui+icons-material@7.1.1_@mui+material@7.1.1_@emotion+react@11.14.0_@types+react@19.1._3897a356b22720cde9ee5b93aeaee659.js  @mui+material@7.1.1_@emotion+react@11.14.0_@types+react@19.1.6_react@19.1.0__@emotion+s_82a6052374c401064c6d40341a7eb02b.js  @mui+styled-engine@7.1.1_@emotion+react@11.14.0_@types+react@19.1.6_react@19.1.0__@emot_6be2aee8956b1b02fae3f2809d83d4ff.js  @mui+system@7.1.1_@emotion+react@11.14.0_@types+react@19.1.6_react@19.1.0__@emotion+sty_0e59c90ee8d48d115812e13f4afaf017.js  (+11 more)
frontend/src/app/: layout.tsx  page.tsx
(+74 files in other folders)
